# tic_tac_toe_ai

./: .gitignore  CMakeLists.txt  README.md
include/: LuaStackMinder.h  dbgout.h  lunar.h  return_codes.h  wxDC.h
lua/: CMakeLists.txt  board.lua  init.lua.in  lua_paths.h.in  render.lua  reset.lua  transform.lua  wxDC.cpp  wxDC.lua
lua/pl/: Date.lua  List.lua  compat.lua  comprehension.lua  input.lua  lexer.lua  seq.lua  types.lua  xml.lua
src/: main.cpp
tools/: matchers.lua  wxDC_method_list.lua
